cargo-features = ["edition2024"]

[package]
name = "codespaces-rust"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4"
rand = "0.8.5"
serenity = "0.12.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
faker_rand = "0.1.1"
serde = { version = "1.0.209", features = ["derive"] }
surrealdb = "2.0.4"
thiserror = "2.0.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
poise = "0.6.1"
