[package]
name = "codespaces-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.8.2", features = [
  "sqlite",
  "runtime-tokio",
  "tls-native-tls",
] }
actix-files = "0.6.2"
actix-web = "4"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
